tree-sitter-adventlang/test/corpus/2_medium_sized.txt
===============
Medium sized 1
===============

fn solve(input) {
  let values = input :lines :map |line: str| {
    let digits = line :chars :filter is_digit
    int(digits[0] + digits[-1])
  }

  values :sum
}

---

(source_file
    (named_fn_item
    (identifier)
    (declarable
        (declare_var
        (identifier)))
    (declare_stmt
        (declare_var
        (identifier))
        (postfix_call_expr
        (postfix_call_expr
            (identifier)
            (identifier))
        (identifier)
        (anonymous_fn
            (declarable
            (declare_var
                (identifier)
                (str_type)))
            (block_expr
            (declare_stmt
                (declare_var
                (identifier))
                (postfix_call_expr
                (postfix_call_expr
                    (identifier)
                    (identifier))
                (identifier)
                (identifier)))
            (expr_stmt
                (regular_call_expr
                (lookup
                    (identifier))
                (binary_expression
                    (index_expr
                    (identifier)
                    (integer_literal))
                    (index_expr
                    (identifier)
                    (unary_expression
                        (integer_literal))))))))))
    (expr_stmt
        (postfix_call_expr
        (identifier)
        (identifier)))))
